# astro-alerts-three

api/: Cargo.toml  test.py
api/src/: main.rs
api/src/api/: launch_data.rs  misc.rs  mod.rs
api/src/core/: clean.rs  data.rs  mod.rs  time_left.rs
api/src/repository/: mongo.rs
api/src/utils/: constants.rs  env.rs  mod.rs
x-bot/: Cargo.toml
x-bot/src/: main.rs
x-bot/src/bot/: bot.rs
x-bot/src/model/: launches.rs  mod.rs
x-bot/src/utils/: env.rs  mod.rs
x-bot/src/utils/serde/: mod.rs
