[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
mongodb = "3.0.1"
serde_json = "1.0.128"
serde_repr = "0.1"
env_logger = "0.11.5"
log = "0.4.20"
futures = "0.3.31"
lazy_static = "1.4"
once_cell = "1.20.2"
dotenv = "0.15.0"
redis = "0.32.5"
deadpool-redis = "0.22.0"
reqwest = { version = "0.12.8", features = ["json"] }
chrono = { version = "0.4.33", features = ["serde"] }
bson = { version = "2.12.0", features = ["chrono-0_4", "serde_with-3"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
