[package]
name = "x-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
critter = "0.1.75"
serde_json = "1"
serde_repr = "0.1"
chrono = "0.4.33"
env_logger = "0.11.0"
log = "0.4.20"
dotenv = "0.15.0"
redis = "0.29.0"
reqwest = { version = "0.12.8", features = ["json"] }
bson = { version = "2.9.0", features = ["chrono-0_4", "serde_with-3"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
